force-app/main/default/objects/PDRI__ComparisonViewRule__c/PDRI__ComparisonViewRule__c.object-meta.xml
<CustomObject>
    <label>Metadata Filter Rule</label>
    <nameField>
        <displayFormat>CRN-{0000000}</displayFormat>
        <label>Metadata Filter Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Filter Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>