force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__Action__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Action__c</fullName>
    <description>Action to be taken by this rule.</description>
    <inlineHelpText>What action should this rule take?</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>