force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__ComparisonView__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ComparisonView__c</fullName>
    <description>Action to be taken by this rule.</description>
    <inlineHelpText>What action should this rule take?</inlineHelpText>
    <label>Metadata Filter</label>
    <referenceTo>PDRI__ComparisonView__c</referenceTo>
    <relationshipName>Comparison_View_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>