force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__FilterType__c.field-meta.xml
<CustomField>
    <fullName>PDRI__FilterType__c</fullName>
    <description>Action to be taken by this rule.</description>
    <inlineHelpText>What action should this rule take?</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Component_Type</fullName>
                <default>true</default>
                <label>Component Type</label>
            </value>
            <value>
                <fullName>Component_Name</fullName>
                <label>Component Name</label>
            </value>
            <value>
                <fullName>Namespace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>