force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__FilterValue__c.field-meta.xml
<CustomField>
    <fullName>PDRI__FilterValue__c</fullName>
    <description>Filter value used by this rule.</description>
    <inlineHelpText>What value should this rule use for filtering?</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>