force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__ParentRule__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ParentRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Rule</label>
    <referenceTo>PDRI__ComparisonViewRule__c</referenceTo>
    <relationshipLabel>Metadata Filter Rules</relationshipLabel>
    <relationshipName>Child_Comparison_View_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>