force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__ParentRuleFilterType__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ParentRuleFilterType__c</fullName>
    <formula>Text(PDRI__ParentRule__r.PDRI__FilterType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Rule Filter Type</label>
    <type>Text</type>
</CustomField>