force-app/main/default/objects/PDRI__ComparisonViewRule__c/fields/PDRI__ParentRuleFilterValue__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ParentRuleFilterValue__c</fullName>
    <formula>PDRI__ParentRule__r.PDRI__FilterValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Rule Filter Value</label>
    <type>Text</type>
</CustomField>